# myso-messaging-stack

./: .gitignore  README.md
relayer/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
relayer/diagrams/: README.md
relayer/docs/: archive-r2-prod.md  messaging-relayer.postman_collection.json
relayer/migrations/: 001_initial.sql  002_membership.sql  003_group_features.sql  004_message_nonce_index.sql  005_message_attribution.sql  006_agent_messaging_groups.sql  007_message_reactions.sql  008_paid_message_escrows.sql  009_workflow_items.sql  010_archive_messages.sql
relayer/src/: config.rs  lib.rs  main.rs  server.rs  state.rs
relayer/src/archive/: file_storage.rs  index.rs  mod.rs  r2.rs  read.rs  sync.rs  types.rs
relayer/src/auth/: README.md  internal_sync.rs  membership.rs  membership_postgres.rs  middleware.rs  mod.rs  permissions.rs  schemes.rs  signature.rs  types.rs  wallet_middleware.rs  ws_auth.rs
relayer/src/file-storage/: client.rs
relayer/src/file_storage/: mod.rs  types.rs
relayer/src/handlers/: agent_groups.rs  archive.rs  dm_gate.rs  group_features.rs  health.rs  mod.rs  presence.rs  push_devices.rs  unread_counts.rs  user_read_state.rs  user_ws.rs  workflow.rs  ws.rs
relayer/src/models/: agent_messaging_group.rs  attachment.rs  mod.rs  (+8 more)
relayer/tests/: agent_groups_test.rs  agent_messaging_attribution_test.rs  auth_integration_test.rs  dm_gate_test.rs  file_storage_integration_test.rs  file_storage_sync_test.rs  membership_postgres_test.rs  membership_sync_test.rs  membership_sync_workflow_e2e_test.rs  migrations_postgres_test.rs  push_integration_test.rs  realtime_postgres_test.rs  storage_postgres_test.rs  workflow_integration_test.rs  workflow_item_types_test.rs  workflow_store_test.rs  ws_integration_test.rs
(+211 files in other folders)
