[package]
name = "messaging-relayer"
version = "0.1.0"
edition = "2021"

[lib]
name = "messaging_relayer"
path = "src/lib.rs"

[[bin]]
name = "messaging-relayer"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
dotenvy = "0.15"
hex = "0.4"
bytes = "1.5"
http-body-util = "0.1"

# Published from https://github.com/The-Social-Proof-Foundation/myso-rust-sdk (not crates.io).
myso-crypto = { git = "https://github.com/The-Social-Proof-Foundation/myso-rust-sdk.git", branch = "main", features = ["ed25519", "secp256k1", "secp256r1"] }
myso-sdk-types = { git = "https://github.com/The-Social-Proof-Foundation/myso-rust-sdk.git", branch = "main", features = ["serde", "hash"] }

# Keep blake2 for any remaining address derivation if needed
blake2 = { version = "0.10", features = ["std"] }

# New dependencies for event subscription
myso-rpc = { git = "https://github.com/The-Social-Proof-Foundation/myso-rust-sdk.git", branch = "main" }
bcs = "0.1"
tokio-stream = "0.1"

# CORS middleware
tower-http = { version = "0.6", features = ["cors"] }

# File Storage HTTP client for blob/quilt storage
reqwest = { version = "0.12", features = ["json", "multipart"] }

[dev-dependencies]
rand = "0.8"
rstest = "0.25"
tower = "0.5"
tonic = { version = "0.14", features = ["transport"] }
tokio-stream = { version = "0.1", features = ["net"] }
wiremock = "0.6"
